--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2188,6 +2188,9 @@ footer .copyrights p {
 .form-contain .from-group.text-area {
   height: 100px !important;
 }
+.form-contain .from-group.text-area img {
+  top: 10px;
+}
 .form-contain .from-group.text-area .form-control {
   height: 100%;
   resize: none;
@@ -2934,6 +2937,16 @@ footer .copyrights p {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.03);
   transition: all 0.3s linear;
 }
+.single-product .box.notfication .price {
+  font-size: 14px !important;
+  font-weight: 500 !important;
+}
+.single-product .box.notfication .time {
+  text-align: end !important;
+}
+.single-product .box.notfication:hover h2 {
+  color: var(--dark-color) !important;
+}
 .single-product .box.large-box {
   padding: 30px 20px;
 }
@@ -3248,6 +3261,130 @@ footer .copyrights p {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.profile {
+  background-color: #f8f8f8;
+}
+.profile .profile-card {
+  width: 100%;
+  padding: 20px 15px;
+  background-color: var(--light-color);
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.02);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100%;
+}
+.profile .profile-card .image-content {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.profile .profile-card .image-content img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.profile .profile-card h1 {
+  color: var(--dark-color);
+  text-align: center;
+  font-size: 25px;
+  font-weight: 900;
+  margin: 15px 0px;
+}
+.profile .profile-card .nav {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
+  border: 0px;
+  border-radius: 0px;
+}
+.profile .profile-card .nav li {
+  width: 100%;
+  padding: 10px 0px;
+  position: relative;
+  z-index: 9;
+  border-bottom: 1px solid #ddd;
+}
+.profile .profile-card .nav li:last-child {
+  border-bottom: 0px !important;
+}
+.profile .profile-card .nav li a {
+  width: 100%;
+  display: flex;
+  border: 0px;
+  border-radius: 0px;
+  align-items: center;
+  align-content: center;
+  position: relative;
+  z-index: 9;
+  -webkit-padding-start: 10px;
+          padding-inline-start: 10px;
+}
+.profile .profile-card .nav li a img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
+}
+.profile .profile-card .nav li a span {
+  color: var(--dark-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+.profile .profile-card .nav li a::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  background-color: var(--secondary-color);
+  top: 0;
+  right: 0;
+  z-index: 2;
+  transform: scaleY(0);
+  transition: all 0.3s linear;
+}
+.profile .profile-card .nav li a:hover, .profile .profile-card .nav li a.active {
+  border: 0px;
+  border-radius: 0px;
+}
+.profile .profile-card .nav li a:hover span, .profile .profile-card .nav li a.active span {
+  color: var(--secondary-color);
+}
+.profile .profile-card .nav li a:hover img, .profile .profile-card .nav li a.active img {
+  filter: var(--primary-color);
+}
+.profile .profile-card .nav li a:hover::after, .profile .profile-card .nav li a.active::after {
+  transform: scaleY(1);
+}
+.profile .tab-pane {
+  width: 100%;
+  height: 100%;
+  padding: 20px 10px;
+  background-color: var(--light-color);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.02);
+  overflow: hidden;
+}
+.profile .tab-pane .contain {
+  transform: translateX(-20px);
+  transition: all 0.3s linear;
+}
+.profile .tab-pane.active.show .contain {
+  transform: translateX(0px);
 }
 
 @media (max-width: 999px) {
