--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -68,6 +68,11 @@ ul{
     padding: 0px;
 }
 
+button {
+    outline: none !important;
+    border: 0px !important;
+}
+
 .swiper-pagination {
     width: 100%;
     display: flex;
