--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -924,7 +924,6 @@ header {
       a {
         width: 40px;
         height: 40px;
-        background-color: var(--light-color);
         display: flex;
         align-items: center;
         align-content: center;
@@ -940,12 +939,73 @@ header {
         }
 
         &.active {
-          background-color: var(--primary-color);
+          background-color: var(--light-color);
 
           img {
             filter: none;
           }
         }
+      }
+    }
+  }
+
+  .sort-contain {
+    position: relative;
+    z-index: 9999 !important;
+
+    .sort-icon {
+      width: 50px;
+      height: 50px;
+      background-color: var(--primary-color);
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      border-radius: 10px;
+
+      img {
+        width: 24px;
+        height: 24px;
+        object-fit: contain;
+      }
+    }
+
+    .sort-list {
+      width: 250px;
+      padding: 5px 15px;
+      background-color: var(--light-color);
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.2);
+      position: absolute;
+      top: 100%;
+      left: 0;
+      z-index: 999;
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(20px);
+      transition: all .3s linear;
+
+      li {
+        padding: 10px 0px;
+        border-bottom: 1px solid #ddd;
+        width: 100%;
+
+        &:last-child {
+          border-bottom: 0px !important;
+        }
+
+        a {
+          width: 100%;
+          color: var(--dark-color);
+          font-size: 15px;
+          font-weight: 500;
+        }
+      }
+
+      &.active {
+        opacity: 1;
+        transform: translateY(0px);
+        visibility: visible;
       }
     }
   }
@@ -1093,6 +1153,7 @@ header {
 footer {
   width: 100%;
   padding: 40px 0px 10px;
+  border-top: 1px solid rgba($color: #808080, $alpha: 0.2);
   background-color: var(--light-color);
 
   .contain {
@@ -1810,9 +1871,10 @@ footer {
   }
 
   .flex-data {
-    display: flex;
-    align-items: center;
-    align-content: center;
+    display: flex !important;
+    align-items: flex-start !important;
+    align-content: flex-start !important;
+    flex-direction: column !important;
     flex-wrap: wrap;
 
     .wrapper {
@@ -2144,18 +2206,18 @@ footer {
 
     table {
       width: 100%;
-      border-radius: 20px;
       overflow: hidden;
-      box-shadow: 0px 0px 10px rgba($color: #ddd, $alpha: 0.1);
+      border: 1px solid rgba($color: #808080, $alpha: 0.1);
 
       tr {
-        border-bottom: 1px solid rgba($color: #ddd, $alpha: 0.1);
+        border-bottom: 1px solid rgba($color: #808080, $alpha: 0.1);
       }
 
       th {
-        height: 70px;
+        height: 56px;
+        width: 200px !important;
         background-color: var(--secondary-color);
-        border-inline-end: 1px solid rgba($color: #ddd, $alpha: 0.1);
+        border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
         vertical-align: middle;
         text-align: center;
         color: var(--light-color);
@@ -2164,7 +2226,7 @@ footer {
       }
 
       td {
-        height: 70px;
+        height: 56px;
         background-color: var(--light-color);
         font-size: 15px;
         font-weight: 500;
@@ -2172,7 +2234,7 @@ footer {
         text-align: center;
 
         &.border-end {
-          border-inline-end: 1px solid rgba($color: #ddd, $alpha: 0.1);
+          border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
         }
       }
     }
@@ -2315,14 +2377,17 @@ footer {
     margin-bottom: 20px;
     text-align: center;
     color: var(--dark-color);
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--gray-color);
   }
 
   h2 {
     font-size: 15px;
     font-weight: 900;
     margin-bottom: 20px;
-    text-align: center;
     color: var(--dark-color);
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--primary-color);
   }
 
   .button-contain {
@@ -2334,6 +2399,15 @@ footer {
 
     .custom-btn {
       width: 49%;
+      
+      &:nth-child(2) {
+        border: 1px solid var(--primary-color);
+        background-color: transparent !important;
+
+        span {
+          color: var(--dark-color) !important;
+        }
+      }
     }
   }
 }
@@ -2693,6 +2767,32 @@ footer {
         transform: translateX(0px)
       }
     }
+  }
+}
+
+.fixed-icon {
+  width: 50px;
+  height: 50px;
+  background: var(--primary-color);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  border-radius: 50%;
+  z-index: 999;
+  animation: pulse-shadow 2s linear infinite alternate-reverse;
+
+  img {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+  }
+
+  &:hover img {
+    animation: tada .3s linear both;
   }
 }
 
