--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3483,6 +3483,129 @@ footer .copyrights p {
           animation: tada 0.3s linear both;
 }
 
+.questions .accordion .card, .questions .accordion .card-header, .questions .accordion .card-body {
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(226, 214, 193, 0.2);
+  border-radius: 5px;
+  border: none !important;
+  width: 100%;
+}
+.questions .accordion .card-header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  padding: 4px 12px 4px 12px;
+}
+.questions .accordion .card-header h2 {
+  width: 100%;
+  height: 100%;
+}
+.questions .accordion .card-header .btn-link {
+  text-decoration: none;
+  color: var(--dark-color);
+  height: 100%;
+  padding: 0px;
+  font-size: 16px;
+  padding: 15px 0px;
+  font-weight: 700;
+  width: 100%;
+  position: relative;
+  z-index: 99;
+  text-align: right !important;
+}
+.questions .accordion .card-header .btn-link::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background: url("../images/down_arrow.svg") center/contain no-repeat;
+  top: calc(50% - 7.5px);
+  left: 10px;
+  transition: all 0.3s linear;
+  z-index: -1;
+}
+.questions .accordion .card-header .btn-link:hover {
+  text-decoration: none;
+}
+.questions .accordion .card-header .btn-link[aria-expanded=true]::after {
+  transform: rotate(-180deg);
+}
+.questions .accordion .card {
+  margin-bottom: 20px !important;
+}
+.questions .accordion .card-body {
+  border-top-right-radius: 0px !important;
+  border-top-left-radius: 0px !important;
+}
+.questions .accordion .card-body p {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 25px;
+}
+
+.terms .contain {
+  width: 100%;
+  padding: 30px 15px;
+  background-color: var(--light-color);
+  border-radius: 20px;
+  border: 1px solid #eee;
+}
+.terms .contain h1 {
+  font-size: 25px;
+  font-weight: 900;
+  margin-bottom: 30px;
+  color: var(--dark-color);
+}
+.terms .contain p {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+  margin: 0px;
+  text-align: justify;
+}
+.terms .contain ul li {
+  -webkit-padding-start: 30px;
+          padding-inline-start: 30px;
+  color: var(--dark-color);
+  position: relative;
+  z-index: 9;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.terms .contain ul li:last-child {
+  margin-bottom: 0px;
+}
+.terms .contain ul li::after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background: url("../images/icons/arrow.svg") center/contain no-repeat;
+  top: calc(50% - 12px);
+  right: 0px;
+  z-index: -1;
+  filter: invert(96%) sepia(57%) saturate(359%) hue-rotate(313deg) brightness(91%) contrast(93%);
+}
+.terms .contain .payment-logo {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin: 20px auto 0px !important;
+}
+.terms .contain .payment-logo img {
+  width: 320px;
+  height: 80px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: right;
+     object-position: right;
+}
+
 @media (max-width: 999px) {
   .navbar.scrolled .navbar-nav {
     display: flex !important;
