--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2634,6 +2634,23 @@ footer {
 .profile {
   background-color: #f8f8f8;
 
+  .filter-icon {
+    width: 40px;
+    height: 40px;
+    background-color: var(--secondary-color);
+    z-index: 99;
+    display: none;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+
+    img {
+      width: 24px;
+      height: 24px;
+      object-fit: contain;
+    }
+  }
+
   .profile-card {
     width: 100%;
     padding: 20px 15px;
@@ -2646,6 +2663,27 @@ footer {
     align-content: center;
     align-items: center;
     height: 100%;
+    position: relative;
+
+    .close-icon {
+      width: 40px;
+      height: 40px;
+      background-color: var(--secondary-color);
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 99;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+
+      img {
+        width: 24px;
+        height: 24px;
+        object-fit: contain;
+      }
+    }
 
     .image-content {
       width: 80px;
@@ -2768,6 +2806,216 @@ footer {
       }
     }
   }
+
+  .table-responsive {
+    width: 100%;
+    overflow-x: scroll;
+
+    &::-webkit-scrollbar,
+    &::selection {
+      width: 0px !important;
+      height: 0px !important;
+      background: transparent !important;
+    }
+
+    table {
+      width: 100%;
+      overflow: hidden;
+      border: 1px solid rgba($color: #808080, $alpha: 0.1);
+
+      tr {
+        border-bottom: 1px solid rgba($color: #808080, $alpha: 0.1);
+      }
+
+      th {
+        height: 56px;
+        background-color: var(--secondary-color);
+        border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
+        vertical-align: middle;
+        text-align: center;
+        color: var(--light-color);
+        font-size: 18px;
+        font-weight: 900;
+      }
+
+      td {
+        height: 56px;
+        background-color: var(--light-color);
+        font-size: 14px;
+        font-weight: 500;
+        vertical-align: middle;
+        text-align: center;
+        border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
+        color: var(--dark-color);
+
+        a {
+          font-size: 14px;
+          font-weight: 500;
+          color: var(--dark-color);
+        }
+
+        .badge {
+          padding: 5px 10px;
+          width: fit-content;
+        }
+
+        .type {
+          display: flex;
+          padding: 5px 10px;
+          background-color: #007bff;
+          color: var(--light-color);
+          font-size: 15px;
+          font-weight: 500;
+          border-radius: 4px;
+          width: fit-content;
+          margin: auto;
+        }
+
+        .flex-data {
+          display: flex;
+          padding: 0px 10px;
+          align-content: center;
+          align-items: center;
+          justify-content: center;
+
+          .icon {
+            width: 40px;
+            height: 40px;
+            background-color: var(--secondary-color);
+            display: flex;
+            border-radius: 10px;
+            margin-inline-end: 10px;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+
+            &:last-child {
+              margin-inline-end: 0px !important;
+            }
+
+            img {
+              width: 24px;
+              height: 24px;
+              object-fit: contain;
+            }
+
+            &:hover img {
+              animation: tada .3s linear both;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.order {
+  background-color: #fefefe;
+
+  .table-responsive {
+    width: 100%;
+    overflow-x: scroll;
+
+    &::-webkit-scrollbar,
+    &::selection {
+      width: 0px !important;
+      height: 0px !important;
+      background: transparent !important;
+    }
+
+    table {
+      width: 100%;
+      overflow: hidden;
+      border: 1px solid rgba($color: #808080, $alpha: 0.1);
+
+      tr {
+        border-bottom: 1px solid rgba($color: #808080, $alpha: 0.1);
+      }
+
+      th {
+        height: 56px;
+        background-color: var(--secondary-color);
+        border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
+        vertical-align: middle;
+        text-align: center;
+        color: var(--light-color);
+        font-size: 18px;
+        font-weight: 900;
+      }
+
+      td {
+        height: 56px;
+        background-color: var(--light-color);
+        font-size: 14px;
+        font-weight: 500;
+        vertical-align: middle;
+        text-align: center;
+        border-inline-end: 1px solid rgba($color: #808080, $alpha: 0.1);
+        color: var(--dark-color);
+
+        .type {
+          display: flex;
+          padding: 5px 10px;
+          background-color: #007bff;
+          color: var(--light-color);
+          font-size: 15px;
+          font-weight: 500;
+          border-radius: 4px;
+          width: fit-content;
+          margin: auto;
+        }
+
+        .flex-data {
+          display: flex;
+          align-content: center;
+          align-items: center;
+          justify-content: center;
+
+          .icon {
+            width: 40px;
+            height: 40px;
+            background-color: var(--secondary-color);
+            display: flex;
+            border-radius: 10px;
+            margin-inline-end: 10px;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+
+            &:last-child {
+              margin-inline-end: 0px !important;
+            }
+
+            img {
+              width: 24px;
+              height: 24px;
+              object-fit: contain;
+            }
+
+            &:hover img {
+              animation: tada .3s linear both;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .box {
+    width: 100%;
+    border-radius: 20px;
+    padding: 20px 10px;
+    background-color: var(--light-color);
+    border: 1px solid #eee;
+    text-align: center;
+
+    h1 {
+      font-size: 20px;
+      font-weight: 900;
+      margin-bottom: 20px;
+      color: var(--dark-color);
+    }
+  }
 }
 
 .fixed-icon {
@@ -2793,6 +3041,140 @@ footer {
 
   &:hover img {
     animation: tada .3s linear both;
+  }
+}
+
+.order-reservation {
+
+  .heading {
+    text-align: unset !important;
+  }
+ 
+  .form-check {
+    position: relative;
+    padding-right: 0;
+    margin-bottom: 25px;
+
+    .form-check-label {
+      text-align: center;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      width: 100%;
+      padding: 20px;
+      cursor: pointer;
+      
+      .pay_logo {
+        width: 100px;
+        height: 50px;
+        display: block;
+        margin: 0 auto 20px auto;
+        object-fit: contain;
+      }
+    }
+      
+    .form-check-input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100% !important;
+      cursor: pointer;
+      opacity: 0;
+    }
+
+    .form-check-input:checked ~ .form-check-label {
+      border: 1px solid var(--dark-color);
+
+      .name {
+        color: var(--dark-color);
+        font-weight: bold;
+      }
+    }
+  }
+
+  .order-data {
+    width: 100%;
+    padding: 10px 10px;
+    background-color: var(--light-color);
+    border: 1px solid #eee;
+    border-radius: 10px;
+
+    .head {
+      width: 100%;
+      padding: 5px 0px 10px;
+      text-align: center;
+      border-bottom: 1px solid #eee;
+      
+      h2 {
+        font-size: 20px;
+        font-weight: 700;
+        color: var(--dark-color);
+        margin: 0px;
+      }
+    }
+
+    .product-img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      margin: 10px 0px;
+    }
+
+    .list {
+      width: 100%;
+
+      li {
+        width: 100%;
+        padding: 8px 0px;
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: space-between;
+
+        span {
+          color: var(--dark-color);
+          font-size: 15px;
+          font-weight: 500;
+
+          &.name {
+            font-weight: 900;
+          }
+        }
+
+        &:last-child {
+          margin-bottom: 0px;
+        }
+
+        &.seprate {
+          padding: 0px !important;
+          border-top: 1px solid #eee;
+        }
+
+        .custom-btn {
+          width: 100%;
+          height: 45px;
+          border-radius: 40px;
+          outline: none;
+          border: 0px;
+          z-index: 9;
+          background-color: var(--primary-color);
+          display: flex;
+          align-items: center;
+          align-content: center;
+          justify-content: center;
+
+          span {
+            color: var(--dark-color);
+            font-size: 15px;
+            font-weight: 500;
+          }
+
+          &:hover span {
+            animation: storm .4s linear !important;
+          }
+        }
+      }
+    }
   }
 }
 
